# pandoc-hwpx

./: .gitignore  CLAUDE.md  PLAN.md  PROGRESS.md  README.md  example.qmd  pyproject.toml
.claude/skills/debug-ast/: SKILL.md
.claude/skills/inspect/: SKILL.md
.claude/skills/render/: SKILL.md
.claude/skills/test/: SKILL.md
_extensions/hwpx/: _extension.yml  hwpx-filter.lua
examples/: _quarto.yml  example.hwpx  example.qmd  references.bib
pandoc_hwpx/: __init__.py  __main__.py  converter.py  lineseg.py  math_converter.py
tests/fixtures/: example.qmd
